Extension template init

--- a/src/app.postcss
+++ b/src/app.postcss
@@ -1,2 +1,5 @@
-/*place global styles here */
-html, body { @apply h-full overflow-hidden; }
+html,
+body {
+	@apply !h-[600px] !w-[800px];
+	background-repeat: no-repeat, no-repeat, no-repeat;
+}
